--- a/Multas/Multas/Views/Agentes/Delete.cshtml
+++ b/Multas/Multas/Views/Agentes/Delete.cshtml
@@ -28,7 +28,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Fotografia)
+            @*@Html.DisplayNameFor(model => model.Fotografia)*@
+            <img src="~/imagens/@Model.Fotografia" height="150" />
         </dt>
 
         <dd>
