--- a/Multas/Multas/Views/Agentes/Details.cshtml
+++ b/Multas/Multas/Views/Agentes/Details.cshtml
@@ -27,7 +27,8 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Fotografia)
+            @*@Html.DisplayNameFor(model => model.Fotografia)*@
+            <img src="~/imagens/@Model.Fotografia" height="150" />
         </dt>
 
         <dd>
