--- a/Multas/Multas/Views/Agentes/Delete.cshtml
+++ b/Multas/Multas/Views/Agentes/Delete.cshtml
@@ -4,11 +4,12 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Apagar Agente</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Quer remover este Agente?</h3>
 <div>
-    <h4>Agentes</h4>
+    @*Este helper mostra as mensagens de rrro que existem associadas ao Modelo*@
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -38,12 +39,13 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Regressar à listagem", "Index")
         </div>
     }
 </div>
